--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@ term xterm-256color
 enable_audio_bell no
 
 # use fish
-shell fish --interactive --login
+# shell fish --interactive --login
 
 # transparent
 dynamic_background_opacity true
@@ -23,5 +23,57 @@ confirm_os_window_close 0
 # use the option as alt key in mac because mac is stupid to not do it by default
 #macos_option_as_alt yes
 placement_strategy top-left
-# linux_display_server x11
+#linux_display_server x11
 hide_window_decorations yes
+
+
+# split
+enabled_layouts splits:split_axis=horizontal,stack
+# mapping
+
+kitty_mod alt
+
+
+# map kitty_mod+n new_tab
+map kitty_mod+n new_window
+map kitty_mod+_ launch --location=hsplit
+map kitty_mod+| launch --location=vsplit
+
+map kitty_mod+h neighboring_window left
+map kitty_mod+l neighboring_window right
+map kitty_mod+k neighboring_window up
+map kitty_mod+j neighboring_window down
+
+map kitty_mod+shift+h resize_window narrower 3
+map kitty_mod+shift+l resize_window wider 3
+map kitty_mod+shift+k resize_window taller 3
+map kitty_mod+shift+j resize_window shorter 3
+
+map kitty_mod+shift+n new_tab
+map kitty_mod+shift+l next_tab
+map kitty_mod+shift+h previous_tab
+
+map kitty_mod+1 goto_tab 1
+map kitty_mod+2 goto_tab 2
+map kitty_mod+3 goto_tab 3
+map kitty_mod+4 goto_tab 4
+map kitty_mod+5 goto_tab 5
+map kitty_mod+8 goto_tab 8
+map kitty_mod+9 goto_tab 9
+map kitty_mod09 goto_tab 10
+
+
+map kitty_mod+q close_window
+map ctrl+q close_tab
+
+
+map ctrl+l combine : clear_terminal scroll active : send_text normal,application \x0c
+
+map ctrl+r load_config_file
+
+# tab bar
+
+tab_bar_edge top
+tab_bar_style powerline
+
+map kitty_mod+z toggle_layout stack
