--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -120,4 +120,4 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g default-shell /usr/bin/fish
+# set -g default-shell /usr/bin/fish
