chore: remove tmux

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,7 +24,5 @@ confirm_os_window_close 0
 #macos_option_as_alt yes
 placement_strategy top-left
 #linux_display_server x11
-hide_window_decorations yes
-
-
+hide_window_decorations true
 
